# zerokdb

./: .env.example  .flake8  .gitignore  README.md  api.py  change_tracker.py  file_storage.py  ipfs_storage.py  pyproject.toml  repl.py  requirements.txt  simple_sql_db.py  test_database_api.py  text_to_embedding.py
app/: main.py
blockchain/aptos/.aptos/: config.yaml
blockchain/evm/: hardhat.config.ts  package-lock.json  package.json
blockchain/evm/contracts/: TableSequence.sol
blockchain/evm/scripts/: deploy.ts
blockchain/evm/test/: TableSequence.ts
contracts/: hardhat.config.js  package.json
contracts/contracts/: TableSequences.sol
contracts/scripts/: deploy.js
contracts/test/: TableSequences.test.js
hardhat-project/: hardhat.config.js
move-contracts/: Move.toml  README.md
move-contracts/.aptos/: config.yaml
move-contracts/sources/: escrow_native.move  table_sequence.move
scripts/load-move-book/: README.md  main.py  requirements.txt
tests/: test_contract_controller.py  test_database_api.py
web/: .env.example  Dockerfile  entrypoint.sh  package.json
web/public/: 0k-worker.sh
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: footer.tsx  header.tsx  sql-input.tsx  wallet.tsx
worker/: .env.example  .main.py  Dockerfile  README.md  entrypoint.sh  main.py  pyproject.toml  requirements.txt  run_main.py  update_streamlit.sh
worker/.streamlit/: config.toml
worker/jobs/: process_designated_proof_requests.py
worker/services/: hub_service.py  proof_service.py  registration_service.py  signature_service.py
zerokdb/: README.md  api.py  config.py  enhanced_file_storage.py  file_storage.py  ipfs_storage.py  simple_sql_db.py
zerokdb/tests/: test_database_api.py
zerokdb/zerokdb/: api.py  change_tracker.py  enhanced_file_storage.py  ipfs_storage.py  local_storage.py  repl.py  simple_sql_db.py
zerokdb/zk/: table_parser.py
zerokdbapi/: .env.example  Dockerfile  Procfile  README.md  TableSequenceClient.py  TextToEmbedding.py  config.py  contract_controller.py  controller.py  db.py  entrypoint.sh  ipfs_service.py  main.py  pyproject.toml
zerokdbapi/api/: table_sequence.py
zk/: md5.py
(+18 files in other folders)
